--- a/hw4/homework/Dockerfile
+++ b/hw4/homework/Dockerfile
@@ -1,12 +1,18 @@
 FROM svizor/zoomcamp-model:mlops-3.10.0-slim
 
+RUN pip install -U pip
+RUN pip install pipenv
+RUN pip install pandas
+RUN pip install pyarrow
+
 WORKDIR /app
-COPY [ "model2.bin", "model.bin" ]
 
-COPY ['Pipfile', 'Pipfile.lock', "./"]
+RUN mkdir outputs
 
+COPY ["Pipfile", "./"]
+COPY ["Pipfile.lock", "./"]
 RUN pipenv install --system --deploy
 
-COPY ['starter.py', "./"]
+COPY ["starter.py", "./"]
 
 RUN python3 starter.py 2022 04
